# app/serializers/insight_serializer.rb
@@ -9,12 +9,8 @@ class InsightSerializer < ApplicationSerializer
       {
         value: Insight::DECIMAL_ATTRIBUTES.include?(insight_field.to_sym) ? value.to_f : value,
         ratio_value: params[:ratio_enabled] ? compare_with_previous_period(object, insight_field, params) : nil
-      }
+      }.compact
     end
-  end
-
-  attribute :ratio_type do |_, params|
-    params[:ratio_enabled] ? params[:ratio_type] : nil
   end
 
   attribute :entity do |object, params|
